# FH-Admin

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: tests.yml
fh_admin_tui/: __init__.py  catalog.py  cli_config.py  config.py  diagnostics.py  doctor.py  mutations.py  save_ops.py  textual_app.py  tui.py
fh_admin_tui/controllers/: __init__.py  textual_actions.py
fh_admin_tui/domain/: __init__.py  change_summary.py  character_rules.py  inventory_rules.py  save_validation.py
fh_admin_tui/legacy/: __init__.py  tui.py
fh_admin_tui/resources/: rpgsave_codec.js
fh_admin_tui/services/: __init__.py  actor_service.py  inventory_service.py  results.py  review_service.py
fh_admin_tui/ui/: __init__.py  layout.py  rendering.py  screens.py
scripts/: install-linux.sh  uninstall-linux.sh
tests/: test_codec.py  test_config.py  test_core.py  test_textual_flows.py
tests/fixtures/: helpers.py  minimal_save.json
