[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fh-admin-tui"
version = "0.1.0"
description = "Textual save editor for Fear & Hunger 1"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86,<1",
    "rich>=13.9,<14",
    "rapidfuzz>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.7,<2",
]

[project.scripts]
fh-admin-tui = "fh_admin_tui.textual_app:main"

[tool.setuptools.packages.find]
include = ["fh_admin_tui*"]

[tool.setuptools.package-data]
fh_admin_tui = ["resources/*.js"]
